# critique-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/: questions.json
data/sample_docs/: 01_overview.md  02_pricing.md  03_data_retention.md  04_authentication.md  05_integrations.md  06_support_sla.md
eval/: run_eval.py
src/critique_rag/: __init__.py  cli.py  config.py  embeddings.py  graph.py  ingest.py  llm.py  nodes.py  state.py  trace.py  vector_store.py
tests/: test_smoke.py
