[project]
name = "critique-rag"
version = "0.1.0"
description = "Self-critiquing RAG system with a cyclical, stateful LangGraph workflow"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.69",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/critique_rag"]
